# clean-python-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Procfile  README.md  pyproject.toml
app/: __init__.py
app/controllers/: signup.py
app/data/: __init__.py
app/data/usecases/: db_add_account.py  db_add_survey.py  db_authentication.py  db_load_account_by_token.py  db_load_survey_by_id.py  db_load_surveys.py
app/domain/: __init__.py
app/domain/model/: account.py  survey.py  survey_result.py
app/domain/usecases/: add_account.py  add_survey.py  authentication.py  load_account_by_token.py  load_survey_by_id.py  load_surveys.py  save_survey_result.py
app/infra/: __init__.py
app/infra/cryptography/: bcrypt_adapter.py  jwt_adapter.py
app/infra/validators/: email_validator_adapter.py
app/main/: __init__.py  main.py
app/main/adapters/: fastapi_middleware_adapter.py  fastapi_route_adapter.py
app/main/config/: app.py  env.py  openapi.py  routes.py
app/main/decorators/: log.py
app/main/factories/: signup.py  signup_validation.py
app/main/middlewares/: route_middleware.py
app/main/routes/: auth_route.py  signup.py  signup_route.py  survey_result_routes.py  survey_routes.py
app/presentation/: __init__.py
app/presentation/controllers/: login.py  login_controller.py  signup.py  signup_controller.py
app/presentation/errors/: access_danied_error.py  email_in_use_error.py  invalid_param_error.py  missing_param_error.py  server_error.py  unauthorized_error.py  unique_value_error.py
app/utils/: email_validator_adapter.py
app/validations/: __init__.py
tests/controllers/: test_signup.py
tests/main/: __init__.py
tests/utils/: test_email_validator_adapter.py
tests/validations/: test_compare_fields_validation.py  test_email_validation.py  test_required_field_validation.py  test_required_fields_validation.py  test_unique_field_validation.py  test_validation_composite.py
(+153 files in other folders)
