[tool.poetry]
name = "clean-python-api"
version = "1.1.0"
description = ""
authors = ["Lucas Pinheiro <lucas4pinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
pymongo = "^3.11.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
py3-validate-email = "^0.2.16"
PyJWT = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.10.1"
black = "^20.8b1"
pytest-mock = "^3.5.1"
mock = "^4.0.3"
coverage = "^5.4"
mongomock = "^3.22.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["*/virtualenvs/*", "tests/*", "*__init__*"]
